# src/main/java/com/daniil1380/coursedatabase/api/account/StockExchangeApiImpl.java
@@ -7,7 +7,9 @@ import io.swagger.client.ApiException;
 import io.swagger.client.api.StockExchangeApi;
 import io.swagger.client.model.StockExchange;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -23,6 +25,10 @@ public class StockExchangeApiImpl extends StockExchangeApi {
             method = RequestMethod.DELETE)
     @Override
     public void deleteStockExchange(@PathVariable("stockExchangeId") Long stockExchangeId) throws ApiException {
+        if (stockExchangeService.get(stockExchangeId.intValue()).isEmpty()) {
+            throw new ResponseStatusException(
+                    HttpStatus.NOT_FOUND, "Not found");
+        }
         stockExchangeService.delete(Math.toIntExact(stockExchangeId));
     }
 
